--- a/public/admin.html
+++ b/public/admin.html
@@ -273,7 +273,7 @@
                     <h3>Внешний вид</h3>
                     <div class="admin-form" style="gap: 20px;">
                         <div>
-                            <label for="setting-menu-banner-url">URL баннера "Гонка за скинами"</label>
+                            <label for="setting-menu-banner-url">URL баннера "HATElove Awards""</label>
                             <input type="text" id="setting-menu-banner-url" placeholder="https://example.com/banner.png">
                         </div>
                         <div>
@@ -303,7 +303,7 @@
                 <div class="settings-group">
                     <h3>Системы</h3>
                     <div class="setting-item">
-                        <span class="setting-label">Гонка за скинами</span>
+                        <span class="setting-label">HATElove Awards</span>
                         <label class="toggle-switch"><input type="checkbox" id="setting-skin-race-enabled"><span class="toggle-slider"></span></label>
                     </div>
                     
