--- a/public/admin.html
+++ b/public/admin.html
@@ -273,7 +273,7 @@
                     <h3>Внешний вид</h3>
                     <div class="admin-form" style="gap: 20px;">
                         <div>
-                            <label for="setting-menu-banner-url">URL баннера "HATElove Awards""</label>
+                            <label for="setting-menu-banner-url">URL баннера "HATElove Awards"</label>
                             <input type="text" id="setting-menu-banner-url" placeholder="https://example.com/banner.png">
                         </div>
                         <div>
