--- a/public/profile.html
+++ b/public/profile.html
@@ -648,21 +648,21 @@
         <h3>Нужна помощь?</h3>
         
         <div style="text-align: left; font-size: 13px; color: #ccc; line-height: 1.5; margin-bottom: 20px;">
-            <p>Не удается привязать аккаунт автоматически?</p>
+            <p style="margin-bottom: 8px;">Не удается привязать аккаунт автоматически?</p>
             <p>Напишите администратору, он добавит ваш Twitch вручную.</p>
-            <p style="font-size: 12px; color: #888; margin-top: 10px;">
-                *Нажмите кнопку ниже, чтобы открыть диалог с уже готовым сообщением.
-            </p>
         </div>
 
-        <div class="popup-actions" style="grid-template-columns: 1fr; gap: 10px;">
+        <div class="popup-actions">
             <a href="https://t.me/hatelove_twitch?text=%D0%9F%D1%80%D0%B8%D0%B2%D0%B5%D1%82!%20%D0%9D%D0%B5%20%D0%BF%D0%BE%D0%BB%D1%83%D1%87%D0%B0%D0%B5%D1%82%D1%81%D1%8F%20%D0%B0%D0%B2%D1%82%D0%BE%D0%BC%D0%B0%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%20%D0%B0%D0%B2%D1%82%D0%BE%D1%80%D0%B8%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D1%8C%D1%81%D1%8F,%20%D0%BF%D0%BE%D0%BC%D0%BE%D0%B3%D0%B8%20%D0%BF%D0%BE%D0%B6%D0%B0%D0%BB%D1%83%D0%B9%D1%81%D1%82%D0%B0" 
                target="_blank" 
                class="popup-btn primary" 
-               style="text-decoration: none; display: flex; align-items: center; justify-content: center;">
-               <i class="fa-regular fa-paper-plane" style="margin-right: 8px;"></i> Написать админу
+               style="text-decoration: none; display: flex; align-items: center; justify-content: center; box-sizing: border-box;">
+               Написать админу
             </a>
-            <button id="twitch-help-close" class="popup-btn secondary">Закрыть</button>
+            
+            <button id="twitch-help-close" class="popup-btn secondary">
+                Закрыть
+            </button>
         </div>
     </div>
 </div>
