--- a/public/events.html
+++ b/public/events.html
@@ -645,7 +645,7 @@
         <div class="icon-wrapper"><i class="fa-solid fa-check-double"></i></div>
         <span>Задания</span>
     </a>
-        <a href="/menu" class="footer-item">
+    <a href="/menu" class="footer-item">
         <div class="icon-wrapper"><i class="fa-solid fa-house"></i></div>
         <span>Главная</span>
     </a>
@@ -657,9 +657,7 @@
         <div class="icon-wrapper"><i class="fa-solid fa-gavel"></i></div>
         <span>Аукцион</span>
     </a>
-    <button class="btn-close-success" onclick="closeSuccessModal()">Закрыть</button>
-    </div>
-</div>
+</footer>
 
 <div id="how-to-use-popup" class="modal-overlay">
     <div class="custom-popup">
