--- a/public/events.html
+++ b/public/events.html
@@ -1008,7 +1008,7 @@
             const remaining = GRIND_COOLDOWN - diff;
             const h = Math.floor(remaining / 3600000);
             const m = Math.floor((remaining % 3600000) / 60000);
-            dom.freeTicketContainer.innerHTML = `<span style="font-size:11px; color:#555;">${h}ч ${m}м</span>`;
+            dom.freeTicketContainer.innerHTML = `<span style="font-size:11px; color:#ffffff; font-weight: 600;">${h}ч ${m}м</span>`;
             
             // Текст над таймером
             if(isBoosted) {
