--- a/public/admin.html
+++ b/public/admin.html
@@ -1719,11 +1719,11 @@
                     <input type="hidden" name="user_id">
                     
                     <label>Twitch Login (Никнейм)</label>
-                    <input type="text" name="twitch_login" id="mtl-login-input" required placeholder="hatelove_ttv">
+                    <input type="text" name="twitch_login" id="mtl-login-input" required placeholder="Введите никнейм пользователя">
                     
                     <label>Twitch ID (Число)</label>
                     <div style="display: flex; gap: 10px;">
-                        <input type="text" name="twitch_id" required placeholder="883996654" style="flex-grow: 1;">
+                        <input type="text" name="twitch_id" required placeholder="Введите TWITCH ID пользователя" style="flex-grow: 1;">
                         <a href="#" id="mtl-find-id-btn" target="_blank" class="admin-menu-button" style="width: auto; padding: 10px; background-color: #555; display: flex; align-items: center; justify-content: center; text-decoration: none;" title="Найти ID на сайте">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </a>
