--- a/public/halloween.html
+++ b/public/halloween.html
@@ -38,7 +38,7 @@
                 <i class="fa-solid fa-lock"></i>
             </div>
             <h2>Доступ ограничен</h2>
-            <p>Чтобы участвовать в ивенте и открывать Котел, необходимо быть подписанным на наш канал.</p>
+            <p>Чтобы участвовать в ивенте, необходимо быть подписанным на наш канал.</p>
 
             <button type="button" id="subscribe-channel-btn" class="gatekeeper-btn subscribe-btn">
                 <i class="fa-brands fa-telegram"></i> Подписаться
