--- a/public/events.html
+++ b/public/events.html
@@ -552,6 +552,17 @@
     </div>
   </div>
 
+  <div class="glass-card" style="padding: 10px 15px; margin-bottom: 15px; display: flex; justify-content: space-between; align-items: center; min-height: 50px;">
+      <div style="font-size: 12px; font-weight: 600; color: var(--text-secondary); display: flex; align-items: center; gap: 8px;">
+          <i class="fa-solid fa-crown" style="color: var(--accent-primary);"></i>
+          Статус аккаунта
+      </div>
+      
+      <div id="user-status" style="text-align: right; font-size: 13px; font-weight: 800; color: var(--accent-primary); line-height: 1.2;">
+          <span style="opacity: 0.5; font-size: 11px;">Загрузка...</span>
+      </div>
+  </div>
+
   <div class="glass-card">
     <div class="section-title"><i class="fa-solid fa-fire"></i> Ежедневная Серия</div>
     
