--- a/public/menu.html
+++ b/public/menu.html
@@ -342,11 +342,13 @@
     </div>
   </div>
 
-  <div id="weekly-modal-overlay" class="prompt-overlay hidden" style="align-items: flex-end;"> <div class="weekly-modal-content">
+  <div id="weekly-modal-overlay" class="prompt-overlay hidden" style="align-items: flex-end;">
+    <div class="weekly-modal-content">
         <div class="weekly-modal-header">
             <h3 id="weekly-modal-title">Недельные испытания</h3>
             <span id="weekly-modal-counter" class="weekly-goals-progress-text">0 / 0</span>
-            <button id="weekly-modal-close-btn" class="promo-notification-close" style="background: rgba(255,255,255,0.1);">&times;</button>
+            
+            <button id="weekly-modal-close-btn" class="weekly-modal-close">&times;</button>
         </div>
         
         <div id="weekly-goals-list-container" class="weekly-goals-scroll-area">
