--- a/public/halloween.html
+++ b/public/halloween.html
@@ -129,7 +129,7 @@
             </div>
             <div class="modal-body">
                 <p>Выполняй челленджи, ручные задания и испытания, чтобы зарабатывать билеты.</p>
-                <p>Закидывай заработанные билеты в <span class="dynamic-word-acc">котел</span>. Чем больше билетов в <span class="dynamic-word-prep">котле</span>, тем он становится больше, а призы в нем — лучше!</p>
+                <p>Закидывай заработанные билеты в <span class="dynamic-word-acc">котел</span>. Чем больше билетов в <span class="dynamic-word-prep">котле</span>, тем он становится больше, а призы в нем - лучше!</p>
                 <p><strong>Подсказка:</strong> чтобы рассмотреть предмет и узнать его название, просто нажмите на его изображение.</p>
             </div>
         </div>
