--- a/public/advent.html
+++ b/public/advent.html
@@ -214,7 +214,7 @@
 </head>
 <body>
 
-    <button class="back-btn" onclick="window.location.href='index.html'">
+    <button class="back-btn" onclick="window.location.href='menu.html'">
         <i class="fa-solid fa-arrow-left"></i> Меню
     </button>
 
