--- a/public/admin.html
+++ b/public/admin.html
@@ -1440,7 +1440,7 @@
                 
                 <h1 class="page-header-title">Адвент</h1>
                 
-                <button onclick="window.open('/advent', '_blank')" class="admin-action-btn" 
+                <button onclick="window.location.href='/advent'" class="admin-action-btn" 
                         style="width: auto; padding: 8px 12px; font-size: 13px; display: flex; gap: 6px; align-items: center; background-color: rgba(255, 215, 0, 0.1); color: #ffd700; border: 1px solid rgba(255, 215, 0, 0.3);">
                     <i class="fa-solid fa-eye"></i> <span style="font-weight: 600;">Открыть</span>
                 </button>
