--- a/public/shop.html
+++ b/public/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Premium Shop</title>
+    <title>HATElavka Shop</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="/fontawesome/css/all.min.css" />
     <style>
@@ -535,17 +535,6 @@
     display: flex;
     opacity: 1;
     transform: translateY(0);
-}
-
-/* Эффект свечения сзади */
-.case-preview-card::before {
-    content: '';
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-    width: 120px; height: 120px;
-    background: radial-gradient(circle, rgba(255, 204, 0, 0.15) 0%, transparent 70%);
-    pointer-events: none;
 }
 
 .preview-image {
