--- a/public/admin.html
+++ b/public/admin.html
@@ -123,13 +123,10 @@
                     <div class="icon-wrapper" style="color: #A065F7;"><i class="fa-solid fa-calendar-alt"></i></div>
                     <span>Расписание</span>
                 </div>
-                  <div id="view-admin-p2p-settings" class="view hidden">
-            <div class="page-header">
-                <button class="back-button" data-view="view-admin-main"><i class="fa-solid fa-arrow-left"></i> Назад</button>
-                <h1 class="page-header-title">Настройки P2P</h1>
-                <div style="width: 60px;"></div>
-            </div>
-                  
+                  <div class="admin-icon-button" data-view="view-admin-p2p-settings">
+                        <div class="icon-wrapper" style="color: #e91e63;"><i class="fa-solid fa-key"></i></div>
+                        <span>P2P Настройки</span>
+                    </div>             
                 </div> </div> <div class="quest-card" style="margin-top: 20px; text-align: center;">
                 <p style="font-size: 14px; color: var(--text-color-muted); margin:0;">
                     Панель для администратирования канала HATElove.ttv.
